--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,18 @@
 version: '3.8'
 
-# networks:
-#   monitoring:
-#     driver: bridge
-    
-volumes:
-  prometheus_data: {}
-  grafana_data: {}
+# volumes:
+#   prometheus_data: {}
+#   grafana_data: {}
 
 services:
+  sandbox-exporter:
+    build: ./sandbox-exporter
+    image: sandbox-exporter
+    container_name: sandbox-exporter
+    restart: unless-stopped
+    ports:
+      - 9111:9111
+
   node-exporter:
     image: prom/node-exporter:latest
     container_name: node-exporter
@@ -24,10 +28,6 @@ services:
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
     ports:
       - 9100:9100
-    # expose:
-    #   - 9100
-    # networks:
-    #   - monitoring
 
   prometheus:
     image: prom/prometheus:latest
@@ -35,7 +35,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus
+    #   - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -44,18 +44,14 @@ services:
       - '--web.enable-lifecycle'
     ports:
       - 9090:9090
-    # expose:
-    #   - 9090
-    # networks:
-    #   - monitoring
 
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+    # volumes:
+    #   - grafana_data:/var/lib/grafana
+    #   - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+    #   - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     environment:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
@@ -63,9 +59,5 @@ services:
     restart: unless-stopped
     ports:
       - 3000:3000
-    # expose:
-    #   - 3000
-    # networks:
-    #   - monitoring
     labels:
       org.label-schema.group: "monitoring"
