--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,4 +9,4 @@ scrape_configs:
 
   - job_name: "node"
     static_configs:
-    - targets: ["node-exporter:9100"]
+      - targets: ["node-exporter:9100", "sandbox-exporter:9111"]
