--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3.8'
 
-# volumes:
-#   prometheus_data: {}
-#   grafana_data: {}
+volumes:
+  prometheus_data: {}
+  grafana_data: {}
 
 services:
-  sandbox-exporter:
-    build: ./sandbox-exporter
-    image: sandbox-exporter
-    container_name: sandbox-exporter
-    restart: unless-stopped
-    ports:
-      - 9111:9111
+  # sandbox-exporter:
+  #   build: ./sandbox-exporter
+  #   image: sandbox-exporter
+  #   container_name: sandbox-exporter
+  #   restart: unless-stopped
+  #   ports:
+  #     - 9111:9111
 
   node-exporter:
     image: prom/node-exporter:latest
@@ -25,7 +25,7 @@ services:
       - '--path.procfs=/host/proc'
       - '--path.rootfs=/rootfs'
       - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+      # - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
     ports:
       - 9100:9100
 
@@ -35,23 +35,24 @@ services:
     restart: unless-stopped
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    #   - prometheus_data:/prometheus
+      - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--web.enable-lifecycle'
+      - '--storage.tsdb.retention.time=1y'
     ports:
       - 9090:9090
 
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
-    # volumes:
-    #   - grafana_data:/var/lib/grafana
-    #   - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-    #   - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     environment:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
