--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,4 +9,12 @@ scrape_configs:
 
   - job_name: "node"
     static_configs:
-      - targets: ["node-exporter:9100", "sandbox-exporter:9111"]
+      - targets: ["node-exporter:9100", "10.0.1.253:9100"]
+
+  - job_name: "linux_tiny"
+    static_configs:
+      - targets: ["node-exporter:9101", "10.0.1.253:9101"]
+
+  - job_name: "discord_exporter"
+    static_configs:
+      - targets: ["node-exporter:2112"]
