--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,8 +57,23 @@ services:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_RENDERING_SERVER_URL=http://renderer:8081/render
+      - GF_RENDERING_CALLBACK_URL=http://grafana:3000
+      - GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=grafana-image-renderer
     restart: unless-stopped
     ports:
       - 3000:3000
     labels:
       org.label-schema.group: "monitoring"
+    depends_on:
+      - renderer
+
+  renderer:
+    image: grafana/grafana-image-renderer:latest
+    container_name: renderer
+    environment:
+      - ENABLE_METRICS=true
+    ports:
+      - 8081:8081
+    restart: unless-stopped
+
