--- a/prometheus.yml
+++ b/prometheus.yml
@@ -13,8 +13,8 @@ scrape_configs:
 
   - job_name: "linux_tiny"
     static_configs:
-      - targets: ["node-exporter:9101", "10.0.1.253:9101"]
+      - targets: ["10.0.1.250:9101", "10.0.1.253:9101"]
 
   - job_name: "discord_exporter"
     static_configs:
-      - targets: ["node-exporter:2112"]
+      - targets: ["10.0.1.250:2112"]
